Adds inline images and image folder

--- a/mollys-webpage.html
+++ b/mollys-webpage.html
@@ -1,34 +1,62 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Molly's Webpage!</title>
-  </head>
-  <body>
-    <h1>Hi! I'm Molly!</h1>
-    <h2>I made this page to tell you about me!</h2>
 
-    <h3>Here are some of my favorite foods:</h3>
-    <ul>
-      <li>My dog food - it's made with beef!</li>
-      <li>CHEESE!</li>
-      <li>Veggies! Especially these:
-        <ul>
-          <li>Carrots</li>
-          <li>Broccoli</li>
-          <li>CHEESE! (It's totally a vegetable!)</li>
-        </ul>
-      </li>
-      <li>Sticks</li>
-      <li>Other plant things, like flowers. They are tasty.</li>
-    </ul>
+<head>
+  <title>Molly's Webpage!</title>
+</head>
 
-    <h3>And here  are some of my favorite toys:</h3>
-    <ul>
-      <li>My blue rope</li>
-      <li>My yellow squeeky toy; it looks like a bacteria</li>
-      <li>My food ball. It gives me my kibbles when I'm outside!</li>
-    </ul>
+<body>
+  <h1>Hi! I'm Molly! </h1>
+  <h2>I made this page to tell you about <strong>me</strong>!</h2>
+  <img src="img/aussie.jpeg" alt="A picture of Molly">
 
-    <p>In summary, I'm a super fluffy, excited dog and would  love to meet you!</p>
-  </body>
+  <h3>Here are some of my favorite foods:</h3>
+  <ul>
+    <li>
+      <a href="https://www.petco.com/shop/en/petcostore/category/dog/dog-food">
+        My dog food - it's made with <strong>beef</strong>!
+        <img src="img/food-bowl.jpeg" alt="A picture of Molly's food!">
+      </a>
+    </li>
+    <li>
+      <strong><em>CHEESE</em>!</strong>
+      <a href="https://en.wikipedia.org/wiki/Cheese">
+        <img src="img/cheese.jpeg" alt="A picture of a cheese platter">
+      </a>
+    </li>
+    <li>
+      <a href="https://www.halfyourplate.ca/fruits-and-veggies/veggies-a-z/">
+        Veggies! Especially these:
+        <img src="img/veggies.jpeg" alt="A picture of veggies">
+      </a>
+      <ul>
+        <li>Carrots</li>
+        <li>Broccoli</li>
+        <li><strong><em>CHEESE</em></strong>! (It's totally a vegetable!)</li>
+      </ul>
+    </li>
+    <li>Sticks<img src="img/sticks.jpeg" alt="A picture of sticks"></li>
+    <li>Other plant things, like flowers. They are tasty.<img src="img/flowers.jpeg" alt="A picture of a dog eating a flower"></li>
+  </ul>
+
+  <h3>And here are some of my favorite <strong>toys</strong>:</h3>
+  <ul>
+    <li>
+      <a href="https://www.chewy.com/otterly-pets-assorted-small-to/dp/158463?utm_source=google-product&utm_medium=cpc&utm_campaign=hg&utm_content=Otterly%20Pets&utm_term=&gclid=EAIaIQobChMI4d7skNHs4wIV6R-tBh0GsgAuEAQYAyABEgI3avD_BwE">
+        My blue rope
+        <img src="img/rope-toy.jpeg" alt="A blue rope toy">
+      </a>
+    </li>
+    <li>My yellow squeeky toy; it looks like a bacteria</li>
+    <li>
+      <a href="https://www.chewy.com/pet-zone-iq-treat-ball-dog-toy-4-in/dp/142885?utm_source=google-product&utm_medium=cpc&utm_campaign=hg&utm_content=Pet%20Zone&utm_term=&gclid=EAIaIQobChMI0a_H1NHs4wIVsxx9Ch371gmvEAQYBSABEgKojPD_BwE">
+        My food ball. It gives me my <em>kibbles</em> when I'm outside!
+        <img src="img/food-ball.jpeg" alt="A picture of Molly's food ball">
+      </a>
+    </li>
+  </ul>
+
+  <p>In summary, I'm a super fluffy, <em>excited</em> dog and would <strong><em>love</em></strong> to meet you!</p>
+</body>
+
 </html>
