Add second page of Mollys favorite places

--- a/mollys-webpage.html
+++ b/mollys-webpage.html
@@ -93,6 +93,8 @@
   </div>
 
   <p class="summary">In summary, I'm a super fluffy, <em>excited</em> dog and would <strong><em>love</em></strong> to meet you!</p>
+
+  <p>Check out some of my favorite places! <a href="favorite-places.html" role="button" class="btn btn-outline-secondary">Click Me!</a></p>
 </body>
 
 </html>
