Change to use shared style.css page

--- a/favorite-places.html
+++ b/favorite-places.html
@@ -38,22 +38,22 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="img/falls.jpeg" alt="A picture of Multnomah Falls" style="width:100%;">
+          <img src="img/falls.jpeg" alt="A picture of Multnomah Falls" style="width:100%">
         </div>
         <div class="item">
-          <img src="img/gabriel-park.jpeg" alt="A picture of Gabriel Park" style="width:100%;">
+          <img src="img/gabriel-park.jpeg" alt="A picture of Gabriel Park" style="width:100%">
         </div>
         <div class="item">
-          <img src="img/40-acres.jpeg" alt="A picture of 40 Acre Park" style="width:100%;">
+          <img src="img/40-acres.jpeg" alt="A picture of 40 Acre Park" style="width:100%">
         </div>
         <div class="item">
-          <img src="img/white-river.jpeg" alt="A picture of the White River" style="width:100%;">
+          <img src="img/white-river.jpeg" alt="A picture of the White River" style="width:100%">
         </div>
         <div class="item">
-          <img src="img/hood-river.jpeg" alt="A picture of Hood River" style="width:100%;">
+          <img src="img/hood-river.jpeg" alt="A picture of Hood River" style="width:100%">
         </div>
         <div class="item">
-          <img src="img/coast.jpeg" alt="A picture of the Oregon Coast" style="width:100%;">
+          <img src="img/coast.jpeg" alt="A picture of the Oregon Coast" style="width:100%">
         </div>
       </div>
       <!-- Left and right controls -->
