Update shared styles color and add header to favorite-places

--- a/favorite-places.html
+++ b/favorite-places.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-  <h1>Molly's Favorite Places</h1>
-  <p>Hey! Want to learn about some of my favorite places!</p>
+  <header>
+    <h1>Molly's Favorite Places</h1>
+    <p>Hey! Want to learn about some of my favorite places!</p>
+  </header>
   <h3>You should check out these places:</h3>
   <ul>
     <li>Multnomah Falls</li>
